run pypi publish on release

--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -2,10 +2,9 @@
 
 name: Publish to PyPI
 
-on: 
-    push:
-        branches:
-          - master
+on:
+  release:
+    types: [published]
 
 jobs:
   publish:
@@ -23,7 +22,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.8.13'
+          python-version: '3.13'
 
       - name: Install dependencies
         run: |
